[package]
name = "connpass_api_reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.186", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
reqwest = { version = "0.11.23", default_features=false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
